# rct_field_flow

./: .dockerignore  .env.example  .gitignore  00_START_HERE.txt  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_FILES_REMOVED.txt  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUMMARY.txt  Dockerfile  INSTALLATION.md  README.md  RESHAPING_HISTORY.md  STREAMLIT_CLOUD_QUICK_STEPS.txt  STREAMLIT_CLOUD_SETUP.md  analytics_dashboard.py  create_test_user.py  database_migration_test.py  debug_db.py  deploy.ps1  deploy.sh  docker-compose.yml  find_queries.py  fix_app_emojis.py  fix_blank_lines.py  fix_bom.py  fix_emojis.py  launch_ui.bat  launch_ui.sh  pyproject.toml  requirements.txt  setup.py  test_randomize_direct.py  test_stata_enhanced.py  test_stata_rerand.do  update_queries.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
analytics_reports/: activity_by_action_20251128_021112.csv  activity_by_page_20251128_021112.csv  all_users_20251128_021112.csv  daily_active_users_20251128_021112.csv  design_workbook_stats_20251128_021112.csv  randomization_stats_20251128_021112.csv  user_activity_summary_20251128_021112.csv  user_summary_20251128_021112.csv
developer-docs/: BUTTON_FIXES.md  CHANGES.md  EXPORT_AND_SAMPLES.md  EXPORT_FEATURES_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  RCT_DESIGN_INTEGRATION_PROPOSAL.md  RCT_DESIGN_README.md  TESTING_COMPLETE.md  TIPS_AND_EXAMPLES_ADDED.md  UI_INTEGRATION_COMPLETE.md  WHY_DOCKERFILE_REMOVED.md  template.md
(+165 files in other folders)
